Navbar issue solved on mobile - improved login page responsefulness

--- a/src/scss/components/login.scss
+++ b/src/scss/components/login.scss
@@ -2,6 +2,12 @@ input.input.login{
   width: 50%;
 }
 
+@media only screen  and (max-width: 768px) {
+  input.input.login{
+    width: 80%;
+  }
+}
+
 button.button.login{
   white-space: nowrap;
   border: 0;
